[project]
name = "handypi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mediapipe>=0.10.21; platform_machine != 'aarch64'",
    "mediapipe>=0.10.0; platform_machine == 'aarch64'",
    "numpy>=1.26.4,<2",
    "opencv-python>=4.8.0,<4.11.0; platform_machine != 'aarch64'",
    "opencv-python>=4.8.0; platform_machine == 'aarch64'",
    "pika>=1.3.2",
    "python-dotenv>=1.0.0",
    "rich>=14.2.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "piwheels"
url = "https://www.piwheels.org/simple"
explicit = false
